# veedy

./: .env.example  .gitignore  Cargo.toml  README.md
src/: ffmpeg.rs  inlinekeyboard.rs  inlinequery.rs  main.rs  youtubeurl.rs  ytdlp.rs
src/utils/: channelid.rs
