[package]
name = "veedy"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version ="1.0.219",features = ["derive"]}
serde_json = "1.0.140"
url = "2.5.4"
